Adicionando fontes e links
Adicionado uma nova fonte para o site e links para as redes sociais

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root{
     --main: #7300CE;
 
@@ -11,14 +13,16 @@
     --secondary-Light: #e5e5e5;
     --txt-light: #000;
 
-    --alternative-text: #616161; 
+    --alternative-text: #616161;
+    
+    --fonte: 'Roboto', sans-serif;
 }
 .fundo{
     background-color: var(--light);
 }
 .nome-title {
     color: var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
@@ -28,7 +32,7 @@
 /* ---- Introdução ---- */
 .intro-h3 {
     color: var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 32px;
     font-style: normal;
     font-weight: 500;
@@ -36,7 +40,7 @@
 }
 .intro-span {
     color: var(--main);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
@@ -44,7 +48,7 @@
 }
 .intro-p {
     color: var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 24px;
     font-style: normal;
     font-weight: 300;
@@ -55,7 +59,7 @@
 /* ---- Formações ---- */
 .formacoes-title {
     color: var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -76,7 +80,7 @@
 }
 .formacoes-h3 {
     color: var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -84,7 +88,7 @@
 }
 .formacoes-p {
     color: var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -95,7 +99,7 @@
 /* ---- Experiências ---- */
 .exp-title {
     color: var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -115,7 +119,7 @@
 }
 .exp-h3 {
     color: var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -123,7 +127,7 @@
 }
 .exp-p {
     color:  var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -134,7 +138,7 @@
 /* ---- Cursos ---- */
 .cursos-title {
     color:  var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -155,7 +159,7 @@
 }
 .cursos-h3 {
     color:  var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -163,7 +167,7 @@
 }
 .cursos-p {
     color:  var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 20px;
     font-style: normal;
     font-weight: 300;
@@ -181,7 +185,7 @@
     padding: 13px 23px;
 
     color:  var(--light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
@@ -202,7 +206,7 @@
 /* ---- Informações extras ---- */
 .infoextra-title {
     color:  var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -222,7 +226,7 @@
 }
 .infoextra-h3 {
     color:  var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -230,7 +234,7 @@
 }
 .infoextra-p {
     color:  var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -244,7 +248,7 @@ ul {
 /* ---- Footer ---- */
 .h5-footer {
     color:  var(--txt-light);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 25px;
     font-style: normal;
     font-weight: 600;
@@ -252,7 +256,7 @@ ul {
 }
 .p-footer {
     color: var(--alternative-text);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -260,7 +264,7 @@ ul {
 }
 .p-dev {
     color: var(--alternative-text);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -268,7 +272,7 @@ ul {
 }
 .p-dev-span{
     color: var(--main);
-    font-family: Inter;
+    font-family: var(--fonte);
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
